@@ -2813,7 +2813,7 @@ static size_t raw_write(const void *ptr, size_t size, size_t nitems,
     Rrawconn this = con->private;
     size_t freespace = XLENGTH(this->data) - this->pos, bytes = size*nitems;
 
-    if ((double) size * (double) nitems + (double) this->pos > R_LEN_T_MAX)
+    if ((double) size * (double) nitems + (double) this->pos > R_XLEN_T_MAX)
 	error(_("attempting to add too many elements to raw vector"));
     /* resize may fail, when this will give an error */
     if(bytes >= freespace) raw_resize(this, bytes + this->pos);
@@ -2836,7 +2836,7 @@ static size_t raw_read(void *ptr, size_t size, size_t nitems,
     Rrawconn this = con->private;
     size_t available = this->nbytes - this->pos, request = size*nitems, used;
 
-    if ((double) size * (double) nitems + (double) this->pos > R_LEN_T_MAX)
+    if ((double) size * (double) nitems + (double) this->pos > R_XLEN_T_MAX)
 	error(_("too large a block specified"));
     used = (request < available) ? request : available;
     memmove(ptr, RAW(this->data) + this->pos, used);
